--- a/HelperModule/Views/VehicleColors.xaml
+++ b/HelperModule/Views/VehicleColors.xaml
@@ -4,17 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HelperModule.Views"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
              xmlns:Syncfusion="clr-namespace:Syncfusion.UI.Xaml.Grid;assembly=Syncfusion.SfGrid.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Grid.Resources>
-            <ResourceDictionary>
-                <ResourceDictionary.MergedDictionaries>
-                    <ResourceDictionary Source="pack://application:,,,/HelperModule;component/Template/DataTemplate.xaml">
-                </ResourceDictionary.MergedDictionaries>
-            </ResourceDictionary>
+          
         </Grid.Resources>
         <Syncfusion:SfDataGrid x:Name="ColorSummary"                       
                                ColumnSizer="Star"
