--- a/src/Modules/HelperModule/Views/BudgetKey.xaml
+++ b/src/Modules/HelperModule/Views/BudgetKey.xaml
@@ -3,14 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HelperModule.Views"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
              xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:behaviour="clr-namespace:HelperModule.Views.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="600">
-    <ScrollViewer>
+    <Grid>
+        <GroupBox Header="{Binding lrbtnClavesPresupuesto, Source={StaticResource ResourceLanguage}}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -61,7 +63,7 @@
                                                AllowEditing="True"
                                                AllowGrouping="True"/>
                     <Syncfusion:GridTextColumn HeaderText="Nombre" 
-                                               MappingName="Nombre" 
+                                               MappingName="Name" 
                                                TextAlignment="Left"
                                                AllowEditing="True"
                                                AllowGrouping="True"
@@ -70,5 +72,7 @@
 
             </Syncfusion:SfDataGrid>
         </Grid>
-    </ScrollViewer>
+            </GroupBox>
+    </Grid>
+        
 </UserControl>
