--- a/src/Modules/HelperModule/Views/Business.xaml
+++ b/src/Modules/HelperModule/Views/Business.xaml
@@ -4,14 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HelperModule.Views"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
              xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:behaviour="clr-namespace:HelperModule.Views.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <ScrollViewer>
-
+    <Grid>
+        <GroupBox Header="{Binding lrbtnNegocios, Source={StaticResource ResourceLanguage}}">
         <Grid>
 
             <Grid.RowDefinitions>
@@ -19,7 +21,7 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <VirtualizingStackPanel VirtualizationMode="Recycling" Grid.Row="0" Orientation="Horizontal">
+            <StackPanel Grid.Row="0" Orientation="Horizontal">
                 <TextBlock Text="Code" Height="25"  Width="61" Margin="0,28.45,0,0" VerticalAlignment="Top"></TextBlock>
                 <TextBox x:Name="CodeTextBox" MinWidth="1" Height="25" Width="189" IsReadOnly="True" Background="Cyan" 
                          Text="{Binding HelperDto.Code, Mode=TwoWay}" Margin="0,18.5"
@@ -31,7 +33,7 @@
                 <TextBox x:Name="NameTextBox"  Width="230" Height="25" 
                          karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
                          Text="{Binding HelperDto.Name, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Margin="0,18.5"/>
-            </VirtualizingStackPanel>
+            </StackPanel>
             <Syncfusion:SfDataGrid Grid.Row="1" 
                                    x:Name="Summary"                       
                                    ColumnSizer="Star"
@@ -63,7 +65,7 @@
                                                AllowEditing="True"
                                                AllowGrouping="True"/>
                     <Syncfusion:GridTextColumn HeaderText="Nombre" 
-                                               MappingName="Nombre" 
+                                               MappingName="Name" 
                                                TextAlignment="Left"
                                                AllowEditing="True"
                                                AllowGrouping="True"
@@ -72,6 +74,6 @@
 
             </Syncfusion:SfDataGrid>
         </Grid>
-    </ScrollViewer>
-       
+        </GroupBox>
+    </Grid>
 </UserControl>
