--- a/src/Modules/HelperModule/Views/Channel.xaml
+++ b/src/Modules/HelperModule/Views/Channel.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:local="clr-namespace:HelperModule.Views"
              xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
              xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
@@ -10,16 +12,16 @@
              xmlns:behaviour="clr-namespace:HelperModule.Views.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="600">
-    <ScrollViewer>
-
-        <Grid>
+    <Grid>
+        <GroupBox Header="{Binding lrbtnCanales, Source={StaticResource ResourceLanguage}}">
+            <Grid>
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <VirtualizingStackPanel VirtualizationMode="Recycling" Grid.Row="0" Orientation="Horizontal">
+            <StackPanel Grid.Row="0" Orientation="Horizontal">
                 <TextBlock Text="Code" Height="25"  Width="61" Margin="0,28.45,0,0" VerticalAlignment="Top"></TextBlock>
                 <TextBox x:Name="CodeTextBox" MinWidth="1" Height="25" Width="189" IsReadOnly="True" Background="Cyan" 
                              Text="{Binding HelperDto.Code, Mode=TwoWay}" Margin="0,18.5"
@@ -31,7 +33,7 @@
                 <TextBox x:Name="NameTextBox"  Width="230" Height="25" 
                              karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
                              Text="{Binding HelperDto.Name, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Margin="0,18.5"/>
-            </VirtualizingStackPanel>
+            </StackPanel>
             <Syncfusion:SfDataGrid Grid.Row="1" 
                                        x:Name="InvoiceSummary"                       
                                        ColumnSizer="Star"
@@ -56,14 +58,14 @@
                     <behaviour:GridChangeSelectionBehaviour ChangedSelectionCommand="{Binding SelectionChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 </i:Interaction.Behaviors>
                 <Syncfusion:SfDataGrid.Columns>
-                    <Syncfusion:GridTextColumn HeaderText="Code" 
+                    <Syncfusion:GridTextColumn HeaderText="Codigo" 
                                                    MappingName="Code" 
                                                    TextAlignment="Left"
                                                    AllowFiltering="True"                                
                                                    AllowEditing="True"
                                                    AllowGrouping="True"/>
                     <Syncfusion:GridTextColumn HeaderText="Nombre" 
-                                                   MappingName="Canal" 
+                                                   MappingName="Name" 
                                                    TextAlignment="Left"
                                                    AllowEditing="True"
                                                    AllowGrouping="True"
@@ -72,5 +74,6 @@
 
             </Syncfusion:SfDataGrid>
         </Grid>
-    </ScrollViewer>
+            </GroupBox>
+    </Grid>
 </UserControl>
