--- a/src/Modules/HelperModule/Views/ClientBanks.xaml
+++ b/src/Modules/HelperModule/Views/ClientBanks.xaml
@@ -4,21 +4,24 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HelperModule.Views"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
              xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:behaviour="clr-namespace:HelperModule.Views.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="600">
-    <ScrollViewer>
-        <Grid>
+    <Grid>
+        <GroupBox Header="{Binding lrbtnBancosClientes, Source={StaticResource ResourceLanguage}}">    
+    <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition></RowDefinition>
+               
             </Grid.RowDefinitions>
-            <VirtualizingStackPanel VirtualizationMode="Recycling" Grid.Row="0" Orientation="Horizontal">
-                <TextBlock Text="Code" Height="25"  Width="61" Margin="0,28.45,0,0" VerticalAlignment="Top"></TextBlock>
+            <StackPanel Grid.Row="0" Orientation="Horizontal">
+                <TextBlock Text="Codigo" Height="25"  Width="61" Margin="0,28.45,0,0" VerticalAlignment="Top"></TextBlock>
                 <TextBox x:Name="CodeTextBox" MinWidth="1" Height="25" Width="189" IsReadOnly="True" Background="Cyan" 
                          Text="{Binding HelperDto.Code, Mode=TwoWay}" Margin="0,18.5"
                          karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"></TextBox>
@@ -29,7 +32,7 @@
                 <TextBox x:Name="NameTextBox"  Width="230" Height="25" 
                          karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
                          Text="{Binding HelperDto.Name, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Margin="0,18.5"/>
-            </VirtualizingStackPanel>
+            </StackPanel>
             <Syncfusion:SfDataGrid Grid.Row="1" 
                                    x:Name="Summary"                       
                                    ColumnSizer="Star"
@@ -58,12 +61,12 @@
                                                MappingName="Code" 
                                                TextAlignment="Left"
                                                AllowFiltering="True"                                
-                                               AllowEditing="True"
+                                               AllowEditing="False"
                                                AllowGrouping="True"/>
-                    <Syncfusion:GridTextColumn HeaderText="Pais" 
-                                               MappingName="Nombre" 
+                    <Syncfusion:GridTextColumn HeaderText="Banco" 
+                                               MappingName="Name" 
                                                TextAlignment="Left"
-                                               AllowEditing="True"
+                                               AllowEditing="False"
                                                AllowGrouping="True"
                     />
                     <Syncfusion:GridTextColumn HeaderText="SWIFT/BIC" 
@@ -76,5 +79,6 @@
 
             </Syncfusion:SfDataGrid>
         </Grid>
-    </ScrollViewer>
+   </GroupBox>
+        </Grid>
 </UserControl>
