--- a/src/Modules/HelperModule/Views/ClientInvoiceBlocks.xaml
+++ b/src/Modules/HelperModule/Views/ClientInvoiceBlocks.xaml
@@ -4,73 +4,77 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HelperModule.Views"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
              xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:behaviour="clr-namespace:HelperModule.Views.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800">
-    <ScrollViewer>
+    
+    <Grid>
+        <GroupBox Header="Bloque de Facturacion">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition></RowDefinition>
 
-        <Grid>
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <VirtualizingStackPanel VirtualizationMode="Recycling" Grid.Row="0" Orientation="Horizontal">
-                <TextBlock Text="Code" Height="25"  Width="61" Margin="0,28.45,0,0" VerticalAlignment="Top"></TextBlock>
-                <TextBox x:Name="CodeTextBox" MinWidth="1" Height="25" Width="189" IsReadOnly="True" Background="Cyan" 
-                         Text="{Binding HelperDto.Code, Mode=TwoWay}" Margin="0,18.5"
-                         karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"></TextBox>
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                    <TextBlock Text="Codigo" Height="25"  Width="61" Margin="0,28.45,0,0" VerticalAlignment="Top"></TextBlock>
+                    <TextBox x:Name="CodeTextBox" MinWidth="1" Height="25" Width="189" IsReadOnly="True" Background="Cyan" 
+                             Text="{Binding HelperDto.Code, Mode=TwoWay}" Margin="0,18.5"
+                             karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"></TextBox>
 
 
-                <TextBlock Text="Nombre" Width="64" Height="25" Margin="5,19,0,19" 
-                ></TextBlock>
-                <TextBox x:Name="NameTextBox"  Width="230" Height="25" 
-                         karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
-                         Text="{Binding HelperDto.Name, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Margin="0,18.5"/>
-            </VirtualizingStackPanel>
-            <Syncfusion:SfDataGrid Grid.Row="1" 
-                                   x:Name="Summary"                       
-                                   ColumnSizer="Star"
-                                   AllowDraggingColumns="True"
-                                   AllowEditing="False"
-                                   AllowFiltering="True"
-                                   AllowResizingColumns="True"
-                                   AllowSorting="True"
-                                   AllowGrouping="True"
-                                   ShowGroupDropArea="True"
-                                   NavigationMode="Row"
-                                   ItemsSource="{Binding HelperView, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                   AutoGenerateColumns="False">
-                <Syncfusion:SfDataGrid.Resources>
-                    <ResourceDictionary>
-                        <ResourceDictionary.MergedDictionaries>
-                            <ResourceDictionary Source="/Syncfusion.SfGrid.WPF;component/Styles/Styles.xaml" />
-                        </ResourceDictionary.MergedDictionaries>
-                    </ResourceDictionary>
-                </Syncfusion:SfDataGrid.Resources>
-                <i:Interaction.Behaviors>
-                    <behaviour:GridChangeSelectionBehaviour ChangedSelectionCommand="{Binding SelectionChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                </i:Interaction.Behaviors>
-                <Syncfusion:SfDataGrid.Columns>
-                    <Syncfusion:GridTextColumn HeaderText="Code" 
-                                               MappingName="Code" 
-                                               TextAlignment="Left"
-                                               AllowFiltering="True"                                
-                                               AllowEditing="True"
-                                               AllowGrouping="True"/>
-                    <Syncfusion:GridTextColumn HeaderText="Nombre" 
-                                               MappingName="Nombre" 
-                                               TextAlignment="Left"
-                                               AllowEditing="True"
-                                               AllowGrouping="True"
-                    />
-                </Syncfusion:SfDataGrid.Columns>
+                    <TextBlock Text="Nombre" Width="64" Height="25" Margin="5,19,0,19" 
+                    ></TextBlock>
+                    <TextBox x:Name="NameTextBox"  Width="230" Height="25" 
+                             karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
+                             Text="{Binding HelperDto.Name, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Margin="0,18.5"/>
+                </StackPanel>
+                <Syncfusion:SfDataGrid Grid.Row="1" 
+                                       x:Name="Summary"                       
+                                       ColumnSizer="Star"
+                                       AllowDraggingColumns="True"
+                                       AllowEditing="False"
+                                       AllowFiltering="True"
+                                       AllowResizingColumns="True"
+                                       AllowSorting="True"
+                                       AllowGrouping="True"
+                                       ShowGroupDropArea="True"
+                                       NavigationMode="Row"
+                                       ItemsSource="{Binding HelperView, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                       AutoGenerateColumns="False">
+                    <Syncfusion:SfDataGrid.Resources>
+                        <ResourceDictionary>
+                            <ResourceDictionary.MergedDictionaries>
+                                <ResourceDictionary Source="/Syncfusion.SfGrid.WPF;component/Styles/Styles.xaml" />
+                            </ResourceDictionary.MergedDictionaries>
+                        </ResourceDictionary>
+                    </Syncfusion:SfDataGrid.Resources>
+                    <i:Interaction.Behaviors>
+                        <behaviour:GridChangeSelectionBehaviour ChangedSelectionCommand="{Binding SelectionChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    </i:Interaction.Behaviors>
+                    <Syncfusion:SfDataGrid.Columns>
+                        <Syncfusion:GridTextColumn HeaderText="Codigo" 
+                                                   MappingName="Code" 
+                                                   TextAlignment="Left"
+                                                   AllowFiltering="True"                                
+                                                   AllowEditing="False"
+                                                   AllowGrouping="True"/>
+                        <Syncfusion:GridTextColumn HeaderText="Description" 
+                                                   MappingName="Name" 
+                                                   TextAlignment="Left"
+                                                   AllowEditing="False"
+                                                   AllowGrouping="True"
+                        />
 
-            </Syncfusion:SfDataGrid>
-        </Grid>
-    </ScrollViewer>
+                    </Syncfusion:SfDataGrid.Columns>
+                </Syncfusion:SfDataGrid>
+            </Grid>
+        </GroupBox>
+    </Grid>
+   
 </UserControl>
