--- a/src/Modules/HelperModule/Views/Market.xaml
+++ b/src/Modules/HelperModule/Views/Market.xaml
@@ -1,16 +1,19 @@
-﻿<UserControl x:Class="HelperModule.Market"
+﻿<UserControl x:Class="HelperModule.Views.Market"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HelperModule"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
              xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:behaviour="clr-namespace:HelperModule.Views.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <ScrollViewer>
+    <Grid>
+        <GroupBox Header="{Binding lrbtnMercados, Source={StaticResource ResourceLanguage}}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -61,7 +64,7 @@
                                                AllowEditing="True"
                                                AllowGrouping="True"/>
                     <Syncfusion:GridTextColumn HeaderText="Nombre" 
-                                               MappingName="Nombre" 
+                                               MappingName="Name" 
                                                TextAlignment="Left"
                                                AllowEditing="True"
                                                AllowGrouping="True"
@@ -69,5 +72,6 @@
                 </Syncfusion:SfDataGrid.Columns>
             </Syncfusion:SfDataGrid>
         </Grid>
-    </ScrollViewer>
+        </GroupBox>
+    </Grid>
 </UserControl>
