--- a/src/Modules/HelperModule/Views/PeoplePosition.xaml
+++ b/src/Modules/HelperModule/Views/PeoplePosition.xaml
@@ -4,15 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HelperModule.Views"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
              xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:behaviour="clr-namespace:HelperModule.Views.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="600">
-    <ScrollViewer>
-
-        <Grid>
+    <Grid>
+        <GroupBox Header="{Binding lrbtnCargosPersonal, Source={StaticResource ResourceLanguage}}">        
+            <Grid>
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -56,14 +58,14 @@
                     <behaviour:GridChangeSelectionBehaviour ChangedSelectionCommand="{Binding SelectionChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 </i:Interaction.Behaviors>
                 <Syncfusion:SfDataGrid.Columns>
-                    <Syncfusion:GridTextColumn HeaderText="Code" 
+                    <Syncfusion:GridTextColumn HeaderText="Codigo" 
                                                MappingName="Code" 
                                                TextAlignment="Left"
                                                AllowFiltering="True"                                
                                                AllowEditing="True"
                                                AllowGrouping="True"/>
                     <Syncfusion:GridTextColumn HeaderText="Nombre" 
-                                               MappingName="Nombre" 
+                                               MappingName="Name" 
                                                TextAlignment="Left"
                                                AllowEditing="True"
                                                AllowGrouping="True"
@@ -72,5 +74,6 @@
 
             </Syncfusion:SfDataGrid>
         </Grid>
-    </ScrollViewer>
+            </GroupBox>
+    </Grid>
 </UserControl>
