--- a/src/Modules/HelperModule/Views/VehicleRepostajeReason.xaml
+++ b/src/Modules/HelperModule/Views/VehicleRepostajeReason.xaml
@@ -69,7 +69,7 @@
                                            AllowEditing="True"
                                            AllowGrouping="True"/>
                         <syncfusion:GridTextColumn HeaderText="Nombre" 
-                                           MappingName="Nombre" 
+                                           MappingName="Name" 
                                            TextAlignment="Left"
                                            AllowEditing="True"
                                            AllowGrouping="True"
