--- a/src/Modules/HelperModule/Views/Province.xaml
+++ b/src/Modules/HelperModule/Views/Province.xaml
@@ -29,8 +29,10 @@
                         LabelTextWidth="67"
                         DataSource="{Binding HelperDto, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         AssistTableName="COUNTRY"
-                        AssistProperties="Code,Name"
-                        DataFieldFirst="Language"
+                        AssistProperties="Code,CountryName"
+                        AssistDataFieldSecond="SIGLA"
+                        AssistDataFieldFirst="NAME"
+                        DataFieldFirst="Country"
                         SourceView="{Binding CountryDto, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, PresentationTraceSources.TraceLevel=High}"
                         MaxHeight="30"
                         MagnifierCommand="{Binding AssistCountryCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
@@ -71,6 +73,10 @@
                                        AllowGrouping="True"
                                        ShowGroupDropArea="True"
                                        NavigationMode="Row"
+                                       karveControls:KarveGridExt.GridIdentifier="{Binding GridIdentifier, Mode=OneWay}"
+                                       karveControls:KarveGridExt.GridInitCommand="{Binding GridRegisterCommand, Mode=OneWay}"
+                                       karveControls:KarveGridExt.GridParamChangedCommand="{Binding GridResizeCommand, Mode=OneWay}"
+                                       karveControls:KarveGridExt.GridParameters="{Binding GridParam, Mode=OneWay}"
                                        ItemsSource="{Binding HelperView, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                        AutoGenerateColumns="False">
                     <Syncfusion:SfDataGrid.Resources>
